# GMeetBot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  run.zsh
gmeetbot/: __main__.py  exceptions.py  gmeet.py  responses.py  uploader.py
gmeetbot/utils/: logger.py
