[tool.poetry]
name = "gmeetbot"
version = "0.1.0"
description = "Google Meet bot for recording conferences"
authors = ["Shon Qwezon <shonzbso@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
nodriver = "^0.39"
aiormq = "^6.8.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
yadisk = "^3.2.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
