[tool.poetry]
name = "gmeetbot"
version = "0.1.0"
description = "Google Meet bot for recording conferences"
authors = ["Shon Qwezon <shonzbso@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
nodriver = "^0.39"
aiormq = "^6.8.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.11.2"

[tool.ruff]
line-length = 99
lint.ignore = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
